--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.0.0"
+	},
+	"dependencies": {
+		"@sanity/client": "^6.28.2",
+		"@sanity/image-url": "^1.1.0"
 	}
 }
